--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -1,80 +1,125 @@
+@keyframes colors{
+    0%{
+    background-position: 0% 50%;
+    }
+
+    50%{
+    background-position: 100% 50%;
+    }
+
+    100%{
+        background-position: 50% 0%;
+    }
+}
+
+
 body {
     margin: 0;
     padding: 0;
     font-family: 'Exo 2';
-    background-color: #00B4D8;
-   
+    background: linear-gradient(45deg, #EFFFFD, #B8FFF9, #85F4FF, #42C2FF, 
+                                        #85F4FF, #B8FFF9, #EFFFFD);
+    background-size: 2000vh 2000vh;
+    animation: colors 15s ease infinite;
+    position: fixed;
 }
 
-
-.corpo{
-    width: 100%;
-    height: 100vh;
-    background-image: url("../assets/imgs/image.png");
-    background-position:center;
-    background-size: 100%;
-    
-
-}
-
-.nav{
-    height: 100px;
+.conteudo{
     width: 100vw;
-    background-color: rgba(0, 0, 255, 0.151);
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    justify-content: center;
+    height: 100%;
+   
 }
 
 
 
 .logo{
-    width: 120px;
-    height: 95%;
-    background-image: url("../assets/imgs/logo.jpeg");
+    width: 200px;
+    height: 140px;
+    background-image: url("../assets/imgs/logoSemFundo.png");
     background-position:center;
     background-size: 130%;
 }
 
 .opcoes{
-    width: 60%;
-    height: 65%;
-    /* background-color:chocolate; */
-    
+    width: 100%;
+    height: 100px;
     align-items: center;
     justify-content: center;
-    
+    display: flex;
 }
 
-nav{
+.nav_principal{
     width: 100%;
     display: flex;
-
     align-items: center;
     justify-content: center;
-    
-    
 }
 
-nav a {
+ul {
+    display: flex;
+    width: 91%;
+    justify-content: space-between;
+    margin-top: 57px;
+}
+
+ul a {
     font-size: larger;
     font-weight: bolder;
-    color: azure;
+    color: black;
     padding-left: 10%;
     padding-top: 20px;
     text-decoration: none ;
 }
 
 
-.footer{
-
-    height: 80px;
-    width: 100vw;
-    position: fixed;
-    bottom: 0;
-
+ul a .link{
+    height: 40px;
+    width: 80px;
     display: flex;
-    justify-content: flex-end;
-    background-color: rgba(0, 0, 255, 0.493);
+    align-items: center;
+    border-radius: 20%;
+    justify-content: center;
+}
+
+ul a .sobre_reg{
+    height: 40px;
+    width: 100px;
+}
+
+.login_reg{
+    display: flex;
+}
+
+.ind_sobre {
+    display: flex;
+}
+
+ul a .link:hover{
+    background-color: rgba(8, 8, 8, 0.212);
+}
+
+.footer {
+    width: 100vw;
+    height: 10vh;
+    color: white;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: flex-end;
+    position: absolute;
+    top: 90vh;
+}
+
+.footer .container {
+    display: flex;
+    justify-content: center;
+    text-shadow: 0.1em 0.1em 0.2em black;
+}
+
+.footer .container h4 {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
