--- a/Site/RefazendoSite/style.css
+++ b/Site/RefazendoSite/style.css
@@ -4,19 +4,16 @@
     box-sizing: border-box;
 }
 body {
-    display: flex;
-    justify-content: center;
-
-    align-items: center;
-    min-height: 100vh;
-
     background-image: url(fundo.png);
+    width: 100%;
+    height:100%;
 
 }
 .header{
-    width: 100vw;
-    height: 100vh;
-    
+    width: 100%;
+    height: 20vh;
+
+
 }
 .container {
 
@@ -24,11 +21,12 @@ body {
     justify-content: center;
     align-items: center;
     
-    width: 100vw;
+    width: 100%;
     height: 20vh;
 
     background-image: url(OndaRoxa.png);
     background-size: cover;
+
     
 }
 .logoEmpresa { 
@@ -43,21 +41,23 @@ body {
 
     
 }
-.imagemLogo {
+.logoNavbar {
     width: 30%;
     height: 100%;
 
    
 
 }
-.imagemLogo img{
+.logoNavbar img{
     width: 100%;
     height: 100%;
+
 }
 
  .nomeEmpresa {
-    width: 50%;
+    width: 60%;
     height: 50%;
+    
     
    
 }
@@ -66,7 +66,7 @@ body {
     height: 100%;
 
     color: whitesmoke;
-    font-size: 30px;
+    font-size: 5vh;
 
 
 }
@@ -84,6 +84,7 @@ body {
 
     margin-left: 13vw;
 
+
 }
 .navbar li {
     color: whitesmoke;
@@ -91,18 +92,94 @@ body {
 .navbar li a{
     color: whitesmoke;
     text-decoration: none;
+    font-size: 3vh;
 }
 
 .cadastrar { 
+
     text-align: center;
 
-    width: 7vw;
-    padding: 4px;
+    width: 8vw;
+    padding: 2px;
 
     background-color: blueviolet;
     border-radius: 5px;
+
+    
     
 }
+.cadastrar a {
+    color: whitesmoke;
+    text-decoration: none;
 
+    font-size: 3vh;
+}
+
+.telaInicial{
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 100vh;
+
+
+
+}
+
+.ondaAzulTelaInicial{
+    width: 100%;
+    height: 40vh;
+
+
+   background-image: url(ondaAzulParaCima.png);
+}
+
+.telaInicial .textoEBarquinho {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    width: 100%;
+    height: 50%;
+
+}
+
+.telaInicial .textoTelaInicial {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 50%;
+    height: 100%;
+
+   
+}
+
+ .TituloTelaInicial {
+    color: whitesmoke;
+    font-size: 7vh;
+}
+ .texto{
+    width: 90%;
+    height: 50%;
+
+    color: whitesmoke;
+    font-size: 2.5vh;
+
+}
+
+.barquinhoTelaInicial {
+    position: relative;
+    top: 9vh;
+    right: 1vw;
+
+    width: 30vw;
+    height: 50vh;
+
+    background-image: url(logoBarquinho.png);
+    background-size: cover;
+
+}
 
 
