--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -1,355 +1,283 @@
-@keyframes colors{
-    from {
-        opacity: 0;
-        transform: translateY(-100px);
-    }
-    to {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-@keyframes nav{
-    from {
-        opacity: 0;
-        transform: translateX(-100px);
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
 *{
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    list-style: none;
+    box-sizing: border-box;
+}
+body {
+    background-image: url(../assets/imgs/fundo.png);
+    background-size: contain;
+    
+    width: 100%;
+    height:100%;
+
+}
+.header{
+    width: 100%;
+    height: 20vh;
+
+
+}
+.container {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width: 100%;
+    height: 20vh;
+
+    background-image: url(../assets/imgs/OndaRoxa.png);
+    background-size: cover;
+
     
 }
+.logoEmpresa { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-.screen1 {
+    width: 30%;
+    height: 80%;
+    
+    margin-right: 5%;
+
+    
+}
+.logoNavbar {
+    width: 30%;
+    height: 100%;
+
+   
+
+}
+.logoNavbar img{
     width: 100%;
-    height: 94vh;
-    background: url(../assets/imgs/5.jpg);
-    background-size: cover;
-    background-position: center;
+    height: 100%;
+
 }
 
+ .nomeEmpresa {
+    width: 60%;
+    height: 50%;
+ 
+}
+
+.nomeEmpresa div{
+    width: 100%;
+    height: 100%;
+
+    color: whitesmoke;
+    font-size: 5vh;
 
 
-/* NAVBAR */
+}
+
 .navbar {
     display: flex;
-    width: 100%;
-    height: 7%;
-    border-bottom: 2px black solid;
-    justify-content: space-between;
-}
-
-.navbar .logo{
-    display: flex;
-    width: 60%;
-}
-
-.navbar .logo img{
-width: 8%;
-}
-
-.navbar .logo span {
-    margin-top: 1%;
-    font-family: 'Arial Black', Gadget, sans-serif;
-}
-
-.menu {
-    width: 50%;
-    height: 100%;
-}
-
-.menu {
-    display: flex;
-    justify-content: flex-end;
-}
-
-.ul_menu {
-    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
-}
 
+    list-style: none;
 
-.menu ul li {
-    padding-left: 110px;
-}
-
-.menu ul li img{
-    width: 15%;
-}
-
-.menu ul li a{
-    font-family: 'Arial Black', Gadget, sans-serif;
-    color: black;
-    font-weight: 100;
-}
-
-.home {
-    height: 71px;
-    /* display: flex; */
-    align-items: center;
-    margin-top: 81%;
-}
-
-/* .home:hover {
-    height: 71px;
-    display: flex;
-    align-items: center;
-    margin-top: 81%;
-} */
-
-.animationHome {
-    display: flex;
-    opacity: 0;
-    background-color: blue;
-    height: 5px;
-    margin-top: 40%;
-    /* animation: nav 1s ease ; */
-    transition:  opacity 0.1s ease;
-}
-
-
-.aboutUs {
-    height: 71px;
-    display: flex;
-    align-items: center;
-}
-
-.register {
-    height: 71px;
-    display: flex;
-    align-items: center;
-}
-
-.login {
-    height: 71px;
-    display: flex;
-    align-items: center;
-}
-
-
-
-/* CONTEUDO SCREEN 1*/
-
-.conteudoScreen1 {
-    /* background-color: white; */
-    width: 100%;
-    height: 92.8%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.text {
-    /* background-color: pink; */
     width: 50%;
     height: 50%;
-    /* border: 2px solid black; */
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    animation: colors 2s normal ease;
-    margin-bottom: 103px;
+
+    margin-left: 13vw;
+
 
 }
-
-.text .titulo {
-    font-family: 'Rockwell', Courier, monospace;
-    font-size: 58px;
-    margin-bottom: 20px;
+.navbar li {
+    color: whitesmoke;
+}
+.navbar li a{
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 3vh;
 }
 
-.texto {
-    display: flex;
-    width: 70%;
-    font-size: 23px;
-    margin-bottom: 6%;
-}
+.cadastrar { 
 
-.efeito {
     text-align: center;
-    border: none;
-    color: white;
-    padding: 20px;
-    margin: 10px;
-    font-size: 24px;
-    line-height: 24px;
-    border-radius: 10px;
+
+    width: 8vw;
+    padding: 2px;
+
+    background-color: blueviolet;
+    border-radius: 5px;
+
+    
+    
+}
+.cadastrar a {
+    color: whitesmoke;
+    text-decoration: none;
+
+    font-size: 3vh;
+}
+
+.telaInicial{
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 120vh;
+
+
+
+}
+
+.ondaAzulTelaInicial{
+    width: 100%;
+    height: 100vh;
+
+
+   background-image: url(../assets/imgs/ondaAzulParaCima.png);
+   background-size: cover;
+}
+
+.telaInicial .textoEBarquinho {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    width: 100%;
+    height: 50%;
+
+}
+
+.telaInicial .textoTelaInicial {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 50%;
+    height: 100%;
+
+   
+}
+
+ .TituloTelaInicial {
+    color: whitesmoke;
+    font-size: 7vh;
+}
+ .texto{
+    width: 90%;
+    height: 50%;
+
+    color: whitesmoke;
+    font-size: 2.5vh;
+
+}
+
+.barquinhoTelaInicial img {
     position: relative;
-    box-sizing: border-box; /*faz com que não some com o resto das margins*/
-    cursor: pointer;
-    transition: all 400ms ease;
-    background-color: #0767c9;
-    width: 30%;
-}
+    top: 10vh;
+    right: 7vw;
 
-.efeito:before {
-    content: '';
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 0px;
-    height: 64px;
-    background: rgba(255, 255, 255, 0.3);
-    border-radius: 10px;
-    transition: all 2s ease;
-}
+    width: 25vw;
+    height: 50vh;
 
-.efeito:hover:before{
+
+}
+.ondaAzulParaBaixo{
+    background-image: url(../assets/imgs/ondaAzulParaBaixo.png);
+    background-size: cover;
     width: 100%;
-
+    height: 100vh;
 }
-
-/* CONTEUDO SCREEN 2 */
-
-.screen2 {
-    width: 100%;
-    height: 54vh;
-    background-color: #0767c9;
+.caracteristicasEmpresa{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    height: 80vh;
+
+}
+.caracteristicas{
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-}
 
-.conteudoScreen2 {
-    display: flex;
-    width: 97%;
-    height: 90%;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-}
+    width: 80%;
+    height: 80%;
 
-.titulo {
-    margin-top: auto;
-    margin-bottom: auto;
-    width: 24%;
-    margin-left: 6%;
-    font-family: "Montserrat", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-
-.valor1, .valor2, .valor3, .valor4 {
-    display: flex;
-    width: 24%;
-    height: 42%;
-    /* border: 2px solid black; */
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 3%;
-    margin-right: 7%;
-}
-
-.valor1 img {
-    height: 70%;
-    margin-top: 7%;
-    /* margin-bottom: auto; */
-    display: flex;
-    margin-left: 6%;
-    border-radius: 66%;
-}
-
-.valor2 img {
-    height: 70%;
-    margin-top: 7%;
-    /* margin-bottom: auto; */
-    display: flex;
-    margin-left: 6%;
-    border-radius: 66%;
-}
-.valor3 img {
-    height: 70%;
-    margin-top: 7%;
-    /* margin-bottom: auto; */
-    display: flex;
-    margin-left: 6%;
-    border-radius: 66%;
-}
-
-.valor4 img {
-    height: 70%;
-    margin-top: 7%;
-    /* margin-bottom: auto; */
-    display: flex;
-    margin-left: 6%;
-    border-radius: 66%;
-}
-
-.texto_1 {
+.missao {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    margin-left: 4%;
-    font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    justify-content: center;
-}
-
-.texto_2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 4%;
-    font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    justify-content: center;
-}
-
-.texto_3 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 4%;
-    font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    justify-content: center;
-}
-
-.texto_4 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-left: 4%;
-    font-family: "Lato", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    justify-content: center;
-}
-
-
-
-
-
-
-/* FOOTER */
-
-.footer {
-    background-color: black;
-    display: flex;
-    width: 100%;
-    height: 7vh;
-    justify-content: space-between;
     align-items: center;
-}
+    justify-content: center;
 
-.barquinho{
-    width: 4%;
-}
-
-.footer h5 {
-    color: white;
+    width: 40%;
+    height: 100%;
 
 }
 
 
-.social {
-    display: block;
-    width: 6%;
+.missao img{
+    width: 50%;
+    height: 40%;
+}
+.tituloMissao{
+    color: whitesmoke;
+    font-size: 10vh;
+}
+.textoMissao {
+    color: whitesmoke;
+    font-size: 3vh;
 }
 
-.social img{
-    width: 24%;
-    margin-left: 4%;
+
+
+.visao{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 40%;
+    height: 100%;
+
 }
+.visao img{
+    width: 50%;
+    height: 40%;
+}
+.tituloVisao{
+    color: whitesmoke;
+    font-size: 10vh;
+}
+.textoVisao {
+    color: whitesmoke;
+    font-size: 3vh;
+}
+
+
+.valores{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 40%;
+    height: 100%;
+
+}
+.valores img{
+    width: 50%;
+    height: 40%;
+}
+.tituloValores{
+    color: whitesmoke;
+    font-size: 10vh;
+}
+.textoValores {
+    color: whitesmoke;
+    font-size: 3vh;
+}
+
