--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -304,10 +304,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
     height: 100vh;
   
 }
+
+.alinharCards{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+}
+
 
 .ondaRoxa {
 
@@ -327,44 +334,28 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 1200px;
+    max-width: 100%;
     flex-wrap: wrap;
-    padding: 40px 0;
 }
 
 .containerCards .card{
    
     position: relative;
-    width: 320px;
-    height: 440px;
-    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05);
-   
-    
-    border-radius: 17px;
+    width: 25vw;
+    height: max(55vh,33vw);
     margin: 30px;
 }
 .containerCards .card .box img{
     width: 100%;
-    height: 100%;
-    background-size: cover;
 }
 .containerCards .card .box{
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    right: 20px;
-    bottom: 20px;
     background: #ebf5fc;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 17px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    border-radius: 5%;
     transition: 0.5s;
+    padding: 5%;
 }
 
 .containerCards .card:hover .box{
-
     transform: translateY(-50px);
     box-shadow: 0 10 40px rgba(0, 0, 0, 0.2);
     background: linear-gradient(45deg, #1F1D36,#4f29cd);
@@ -373,7 +364,7 @@ body {
 
 
 .containerCards .card .box .conteudo{
-    padding: 20px;
+    padding: 7%;
     text-align: center;
 }
 
@@ -395,10 +386,14 @@ body {
 }
 
 .containerCards .card .box .conteudo h3{
-    font-size: 1.8em;
+
+    /* Vai analisar entre o 10px e o 2vw, e ficar o o maior valor */
+    font-size: max(10px, 2vw);
     color: #000;
-    z-index: 1;
+    display: flex;
+    flex-direction: column;
     transition: 0.5s;
+
 }
 
 .containerCards .card:hover .box .conteudo h3{
@@ -411,7 +406,7 @@ body {
 
 .containerCards .card .box .conteudo p{
 
-    font-size: 1em;
+    font-size: min(15px, 2vw);
     font-weight: 300;
     color: #000;
     z-index: 1;
@@ -421,18 +416,16 @@ body {
 .containerCards .card .box .conteudo a{
     position: relative;
     display: inline-block;
-    padding: 8px 20px;
+    padding: 4% 10%;
     background-color: #0E185F;
     border-radius: 20px;
     color: #fff;
     margin-top: 20px;
     text-decoration: none;
-    font-weight: 400;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);    
+    font-size: min(15px, 3vw);    
 }
 
 .containerCards .card:hover .box .conteudo a{
-
     background: blueviolet;
 }
 
