--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -155,6 +155,8 @@ body {
     justify-content: center;
     align-items: center;
 
+    text-align: center;
+
     width: 50%;
     height: 100%;
 
@@ -168,6 +170,7 @@ body {
  .texto{
     width: 90%;
     height: 50%;
+    text-align: center;
 
     color: whitesmoke;
     font-size: 2.5vh;
@@ -216,6 +219,8 @@ body {
     align-items: center;
     justify-content: center;
 
+    text-align: center;
+
     width: 40%;
     height: 100%;
 
@@ -243,6 +248,8 @@ body {
     align-items: center;
     justify-content: center;
 
+    text-align: center;
+
     width: 40%;
     height: 100%;
 
@@ -266,6 +273,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    text-align: center;
 
     width: 40%;
     height: 100%;
