--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -173,7 +173,7 @@ body {
     text-align: center;
 
     color: whitesmoke;
-    font-size: 2.5vh;
+    font-size: 3vh;
 
 }
 
@@ -411,7 +411,7 @@ body {
 }
 .containerCards .card:hover .box .conteudo p{
     color: #fff;
-
+        
 } 
 
 .containerCards .card .box .conteudo p{
@@ -504,12 +504,16 @@ body {
 }
 
 .ondaAzulFooter{
- 
+     position: relative;
+     top: 5vh;
+
     display: flex;
     justify-content: center;
     align-items: center;
+
     width: 100%;
-    height: 10vh;
+    height: 12vh;
+
     background-image: url(../assets/imgs/ondaAzulParaCima.png);
     background-size: cover;
 
