--- a/ProjetoTelaSwing/src/main/java/com/mycompany/projetotelaswing/KeepSwimming.form
+++ b/ProjetoTelaSwing/src/main/java/com/mycompany/projetotelaswing/KeepSwimming.form
@@ -109,7 +109,7 @@
         <Component class="javax.swing.JLabel" name="LogoBarquinho">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/com/mycompany/projetotelaswing/newpackage/logoBarquinho.png"/>
+              <Image iconType="2" name="C:\Users\USER\Downloads\atividades bandtec\2 Semestre\Sprint\Keep-Swimming\ProjetoTelaSwing\src\main\java\com\mycompany\projetotelaswing\newpackage\logoBarquinho.png"/>
             </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="LogoBarquinho"/>
@@ -245,7 +245,7 @@
         <Component class="javax.swing.JLabel" name="OndaNoFinal">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/com/mycompany/projetotelaswing/newpackage/OndaRoxaParaCima.png"/>
+              <Image iconType="2" name="C:\Users\USER\Downloads\atividades bandtec\2 Semestre\Sprint\Keep-Swimming\ProjetoTelaSwing\src\main\java\com\mycompany\projetotelaswing\newpackage\OndaRoxaParaCima.png"/>
             </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
               <ComponentRef name="OndaNoFinal"/>
