--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -10,15 +10,46 @@ body {
     background-image: url(../assets/imgs/fundo.png);
     background-size: cover;
     
-    width: 100%;
-    height:100%;
+    min-width: 100vw;
+    min-height: 100vh;
+
+
+    
 
 }
-.header{
+.logo{
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.scrolled{
+    height: 1500px;
+    background:#1F1D36;
+    transition: 0.3s ease-in-out;
     width: 100%;
-    height: 20vh;
 
+}
 
+.header-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+    height: 100%;
+    padding: 0 5%;
+
+}
+
+.header{
+    width: 100vw;
+    height: 15vh;
+    color: #fff;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    transition: 0.3s ease-in-out;
+    background-image: url(../assets/imgs/fundo.png);
 }
 .container {
 
@@ -34,30 +65,22 @@ body {
 
     
 }
+
 .logoEmpresa { 
     display: flex;
     align-items: center;
     justify-content: center;
 
-    width: 30%;
-    height: 80%;
-    
-    margin-right: 5%;
 
     
 }
 .logoNavbar {
-    width: 30%;
-    height: 100%;
+    width: 100%;
 
    
 
 }
-.logoNavbar img{
-    width: 100%;
-    height: 100%;
 
-}
 
  .nomeEmpresa {
     width: 60%;
@@ -70,7 +93,7 @@ body {
     height: 100%;
 
     color: whitesmoke;
-    font-size: 5vh;
+    font-size: min(25px);
 
 
 }
@@ -78,26 +101,93 @@ body {
 .navbar {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: end;
     align-items: center;
 
     list-style: none;
 
-    width: 50%;
-    height: 50%;
-
-    margin-left: 13vw;
+    width: 100%;
+    margin: 0px 30px 0px;;
 
 
 }
 .navbar li {
     color: whitesmoke;
+    margin: 10px;
 }
 .navbar li a{
     color: whitesmoke;
     text-decoration: none;
-    font-size: 3vh;
+    font-size:min(12px);
 }
+
+/* conteudo */
+.content{
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-top: 30%;
+}
+
+
+
+/* testes */
+
+.navbar a{
+    position: relative;
+    display: block;
+    padding:  10px 15px;
+    border: 2px solid #4f29cd;
+    letter-spacing: 2px;
+    color: #4f29cd;
+    overflow: hidden;
+}
+
+a span{
+    position: relative;
+    z-index: 1;
+    transition: 1s;
+} 
+a:hover span{
+    color: #fff;
+}
+a .wave{
+    position: absolute;
+    top: calc(100% + 22px);
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4f29cd;
+    transition: 1s;
+    text-decoration: none;
+}
+a:hover .wave{
+    top: 0;
+}
+a .wave::before {
+    content: "";
+    position: absolute;
+    top: -22px;
+    left: 0;
+    width: 100%;
+    height: 22px;
+    background: url(wave\ 1.png);
+    animation: animate 0.5s linear infinite;
+}
+
+@keyframes animate{
+    0%{
+        background-position-x:0 ;
+    }
+    100%{
+        background-position-x:118px ;
+    }
+}
+
 
 .cadastrar { 
 
@@ -122,17 +212,14 @@ body {
 .telaInicial{
     display: flex;
     flex-direction: column;
-
     width: 100%;
-    height: 120vh;
-
-
+    height: 100vh;
 
 }
 
 .ondaAzulTelaInicial{
     width: 100%;
-    height: 100vh;
+    height: 20vh;
 
 
    background-image: url(../assets/imgs/ondaAzulParaCima.png);
@@ -144,8 +231,7 @@ body {
     flex-direction: row;
     align-items: center;
 
-    width: 100%;
-    height: 50%;
+    height: 100%;
 
 }
 
@@ -157,7 +243,7 @@ body {
 
     text-align: center;
 
-    width: 50%;
+
     height: 100%;
 
    
@@ -165,15 +251,15 @@ body {
 
  .TituloTelaInicial {
     color: whitesmoke;
-    font-size: 7vh;
+    font-size: max(55px, 15px);
 }
  .texto{
-    width: 90%;
-    height: 50%;
+    width: 70%;
+
     text-align: center;
 
     color: whitesmoke;
-    font-size: 3vh;
+    font-size: min(25px, 13px);
 
 }
 
@@ -191,7 +277,7 @@ body {
     background-image: url(../assets/imgs/ondaAzulParaBaixo.png);
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 20vh;
 }
 .caracteristicasEmpresa{
     display: flex;
@@ -199,8 +285,7 @@ body {
     justify-content: center;
     align-items: center;
 
-    width: 100%;
-    height: 80vh;
+
 
 }
 .caracteristicas{
@@ -209,8 +294,8 @@ body {
     align-items: center;
     justify-content: center;
 
-    width: 80%;
-    height: 80%;
+    
+    height: 100vh;
 
 }
 .missao {
@@ -222,22 +307,22 @@ body {
     text-align: center;
 
     width: 40%;
-    height: 100%;
+    height: 100vh;
 
 }
 
 
 .missao img{
     width: 50%;
-    height: 40%;
+
 }
 .tituloMissao{
     color: whitesmoke;
-    font-size: 10vh;
+    font-size: max(25px,15px);
 }
 .textoMissao {
     color: whitesmoke;
-    font-size: 3vh;
+    font-size: min(20px,12px);
 }
 
 
@@ -256,15 +341,15 @@ body {
 }
 .visao img{
     width: 50%;
-    height: 40%;
+
 }
 .tituloVisao{
     color: whitesmoke;
-    font-size: 10vh;
+    font-size: max(25px,15px);
 }
 .textoVisao {
     color: whitesmoke;
-    font-size: 3vh;
+    font-size: min(20px,12px);
 }
 
 
@@ -282,31 +367,36 @@ body {
 }
 .valores img{
     width: 50%;
-    height: 40%;
+
 }
 .tituloValores{
     color: whitesmoke;
-    font-size: 10vh;
+    font-size:max(25px,15px);
 }
 .textoValores {
     color: whitesmoke;
-    font-size: 3vh;
+    font-size: min(20px,12px);
 }
 
 
 .ondaRoxaValores {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
     width: 100%;
     height: 20vh;
 
-    background-image: url(../assets/imgs/OndaRoxaParaCima.png);
+    background-image: url(../assets/imgs/ondaRoxaParaCima\ 2.png);
     background-size: cover;
 
     
+}
+
+.ondaRoxaValoresBaixo{
+
+    width: 100%;
+    height: 20vh;
+
+    background-image: url(../assets/imgs/ondaRoxaParaBaixo\ 2.png);
+    background-size: cover;
+
 }
 
 /* Footer */
@@ -327,32 +417,35 @@ body {
 }
 
 
-.ondaRoxa {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+.ondaRoxaFooterCima{
     width: 100%;
     height: 20vh;
 
-    background-image: url(../assets/imgs/OndaRoxa.png);
+    background-image: url(../assets/imgs/ondaRoxaParaCima\ 2.png);
     background-size: cover;
 
     
 }
+.ondaRoxaFooterBaixo{
+    width: 100%;
+    height: 20vh;
+
+    background-image: url(../assets/imgs/ondaRoxaParaBaixo\ 2.png);
+    background-size: cover;
+
+
+}
+
 .containerCards{
     display: flex;
     justify-content: center;
-    align-items: center;
     max-width: 100%;
     flex-wrap: wrap;
 }
 
 .containerCards .card{
-    position: relative;
+    display: flex;
     width: 25vw;
-    height: max(55vh,33vw);
     margin: 30px;
 }
 .containerCards .card .box img{
@@ -360,7 +453,7 @@ body {
 }
 .containerCards .card .box{
     background: #ebf5fc;
-    border-radius: 5%;
+    border-radius: 15px;
     transition: 0.5s;
     padding: 5%;
 }
@@ -368,7 +461,7 @@ body {
 .containerCards .card:hover .box{
     transform: translateY(-50px);
     box-shadow: 0 10 40px rgba(0, 0, 0, 0.2);
-    background: linear-gradient(45deg, #1F1D36,#4f29cd);
+    background: linear-gradient(#4f29cd,#1F1D36);
 }
 
 
@@ -379,29 +472,13 @@ body {
 }
 
 
-.containerCards .card .box .conteudo h2{
-    position: absolute;
-    top: -10px;
-    right: 30px;
-    font-size: 8em;
-    color: rgba(0, 0, 0, 0.05);
-    transition: 0.5s;
-    pointer-events: none;
-   
- 
-}
-
-.containerCards .card:hover .box .conteudo h2{
-    color: rgba(0, 0, 0, 0.05);
-}
-
 .containerCards .card .box .conteudo h3{
 
     /* Vai analisar entre o 10px e o 2vw, e ficar o o maior valor */
-    font-size: max(10px, 2vw);
+    font-size:20px;
     color: #000;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     transition: 0.5s;
 
 }
@@ -411,15 +488,15 @@ body {
 }
 .containerCards .card:hover .box .conteudo p{
     color: #fff;
-        
+
 } 
 
 .containerCards .card .box .conteudo p{
 
-    font-size: min(15px, 2vw);
+    font-size: 15px;
     font-weight: 300;
     color: #000;
-    z-index: 1;
+    padding-top: 10px;
     transform: 0.5s;
 }
 
@@ -436,7 +513,7 @@ body {
 }
 
 .containerCards .card:hover .box .conteudo a{
-    background: blueviolet;
+    background: #4f29cd;
 }
 
 .block{
@@ -448,10 +525,7 @@ body {
 }
 
 .imagensFooter {
-  display: flex;
-  height: 8vh;
-  width: 15vw;
-  justify-content:space-between;
+    width: min(2vw);
 }
 
 .imagensFooter h2{
@@ -469,9 +543,9 @@ body {
 }
 .contatoinfo{
     color:#fff;
-    max-width: 500px;
+    max-width: 100%;
     line-height: 55px;
-    font-size: min(17px, 2vw);
+    font-size: min(45px, 1.2vw);
     padding-left: 13%;
     margin-left: 6%;
 
@@ -481,13 +555,18 @@ body {
     font-size: 20px;
 }
 
+iframe{
+    min-width: (200px);
+    height: (100px);
+}
+
 .contato-form{
-    max-width: 700px;
-    margin-right: 50px;
+    max-width: 50%;
+    margin-left: -4%;
 }
 
 .contatoinfo, .contato-form{
-    flex: 1;
+    flex: 0.5;
 }
 
 .contato-form h2{
@@ -504,16 +583,12 @@ body {
 }
 
 .ondaAzulFooter{
-     position: relative;
-     top: 5vh;
-
+ 
     display: flex;
     justify-content: center;
     align-items: center;
-
     width: 100%;
-    height: 12vh;
-
+    height: 10vh;
     background-image: url(../assets/imgs/ondaAzulParaCima.png);
     background-size: cover;
 
@@ -533,11 +608,20 @@ body {
 
 
 /*CARROSEL*/
+
+.telaVeniti{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 #slider {
     margin: 0 auto;
     width: 800px;
     max-width: 100%;
     text-align: center;
+    padding: 25% 0% 25% 0%;
  }
  #slider input[type=radio] {
     display: none;
