--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -10,7 +10,7 @@ body {
     background-image: url(../assets/imgs/fundo.png);
     background-size: cover;
     
-    min-width: 100vw;
+    
     min-height: 100vh;
 
 
@@ -21,6 +21,7 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+
 
 
 .scrolled{
@@ -48,7 +49,6 @@ body {
     position: fixed;
     z-index: 2;
     top: 0;
-    transition: 0.3s ease-in-out;
     background-image: url(../assets/imgs/fundo.png);
 }
 .container {
@@ -141,10 +141,12 @@ body {
     position: relative;
     display: block;
     padding:  10px 15px;
-    border: 2px solid #4f29cd;
+    border: 2px solid rgba(255,255,255,0.1);
+    border-radius: 0 20px 0 20px;
     letter-spacing: 2px;
     color: #4f29cd;
     overflow: hidden;
+    background-color: rgba(255,255,255,0.13);
 }
 
 a span{
