--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -616,11 +616,12 @@ iframe{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 830px;
 }
 
 #slider {
     margin: 0 auto;
-    width: 800px;
+    width: 52%;
     max-width: 100%;
     text-align: center;
     padding: 25% 0% 25% 0%;
@@ -638,6 +639,7 @@ iframe{
     background: #fff;
     position: relative;
     z-index: 1;
+    height: 540px;
  }
  #overflow {
     width: 100%;
@@ -659,7 +661,7 @@ iframe{
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
     line-height: 0;
-    height: 300px;
+    height: 510px;
  }
  #slides .slide {
     width: 25%;
