--- a/Site/src/public/css/index.css
+++ b/Site/src/public/css/index.css
@@ -623,7 +623,7 @@ iframe{
     margin: 0 auto;
     width: 52%;
     max-width: 100%;
-    text-align: center;
+    /* text-align: center; */
     padding: 25% 0% 25% 0%;
  }
  #slider input[type=radio] {
@@ -660,7 +660,7 @@ iframe{
  #slides .inner {
     transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
     width: 400%;
-    line-height: 0;
+    /* line-height: 0; */
     height: 510px;
  }
  #slides .slide {
@@ -753,3 +753,24 @@ iframe{
        margin: 0 auto;
     }
  }
+
+ 
+.slide-content {
+    display: flex;
+}
+
+
+.slide-content img {
+    width: 574px;
+    margin-right: 42px;
+    border-radius: 61px;
+}
+
+
+.div_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
