--- a/ProjetoTelaSwing/KeepSwimming/src/keepswimming/TelaLogin.form
+++ b/ProjetoTelaSwing/KeepSwimming/src/keepswimming/TelaLogin.form
@@ -32,7 +32,7 @@
     <Component class="javax.swing.JLabel" name="jLabel7">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/logoBarquinho.png"/>
+          <Image iconType="3" name="/Imagens/logoBarquinho.png"/>
         </Property>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[500, 366]"/>
@@ -148,7 +148,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/bg.png"/>
+          <Image iconType="3" name="/Imagens/bg.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -160,7 +160,7 @@
     <Component class="javax.swing.JLabel" name="onda1">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/hero-bg.png"/>
+          <Image iconType="3" name="/Imagens/hero-bg.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -172,7 +172,7 @@
     <Component class="javax.swing.JLabel" name="onda2">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/hero-bg.png"/>
+          <Image iconType="3" name="/Imagens/hero-bg.png"/>
         </Property>
       </Properties>
       <Constraints>
@@ -222,7 +222,7 @@
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/imagens/bg.png"/>
+          <Image iconType="3" name="/Imagens/bg.png"/>
         </Property>
       </Properties>
       <Constraints>
