--- a/Site/public/css/index.css
+++ b/Site/public/css/index.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto' ;
+    font-family: 'Poppins',sans-serif;
 }
 body {
     background-image: url(../assets/imgs/fundo.png);
@@ -70,7 +70,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    padding: 20px;
 
     
 }
@@ -80,7 +80,10 @@ body {
    
 
 }
-
+.logoNavbar img{
+    width: 100%;
+    height: 100%;
+}
 
  .nomeEmpresa {
     width: 60%;
@@ -107,7 +110,7 @@ body {
     list-style: none;
 
     width: 100%;
-    margin: 0px 30px 0px;;
+    margin: 0px 30px 0px;
 
 
 }
@@ -141,12 +144,13 @@ body {
     position: relative;
     display: block;
     padding:  10px 15px;
-    border: 2px solid rgba(255,255,255,0.1);
+    border: 2px solid #fff;
     border-radius: 0 20px 0 20px;
     letter-spacing: 2px;
     color: #4f29cd;
     overflow: hidden;
     background-color: rgba(255,255,255,0.13);
+    font-weight: bolder;
 }
 
 a span{
@@ -156,6 +160,7 @@ a span{
 } 
 a:hover span{
     color: #fff;
+    
 }
 a .wave{
     position: absolute;
@@ -163,7 +168,7 @@ a .wave{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #4f29cd;
+    background-color: #00AEFF;
     transition: 1s;
     text-decoration: none;
 }
@@ -177,7 +182,7 @@ a .wave::before {
     left: 0;
     width: 100%;
     height: 22px;
-    background: url(wave\ 1.png);
+    background: url(wave.png);
     animation: animate 0.5s linear infinite;
 }
 
@@ -233,7 +238,7 @@ a .wave::before {
     flex-direction: row;
     align-items: center;
 
-    height: 100%;
+    height: 65%;
 
 }
 
