--- a/Site/public/css/tela-login.css
+++ b/Site/public/css/tela-login.css
@@ -425,10 +425,11 @@ a .wave::before {
 }
 
 
+
 form{
     height: 520px;
     width: 400px; 
-    background-color: rgba(255,255,255,0.13);
+    background-color: rgba(255, 255, 255, 0.13);
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
