alterações na api de cadastro

--- a/Site/public/css/tela-cadastro.css
+++ b/Site/public/css/tela-cadastro.css
@@ -1,9 +1,10 @@
-*,
-*:before,
-*:after{
-    padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,300&display=swap');
+* {
     margin: 0;
-    box-sizing: border-box;}
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
 body {
     margin: 0;
