--- a/Site/public/css/tela-login.css
+++ b/Site/public/css/tela-login.css
@@ -1,13 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,300&display=swap');
-
-*,
-*:before,
-*:after{
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-serif;
-  }
+    font-family: 'Poppins', sans-serif;
+}
 
 body {
     margin: 0;
