--- a/Site/Dash-estatica/nav.css
+++ b/Site/Dash-estatica/nav.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Varela+Round');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 html, body {
     overflow-x: hidden;
     height: 100%;
 }
 body {
-    background: #fff;
+    background: #253370;
     padding: 0;
     margin: 0;
-    font-family: 'Varela Round', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .header {
     display: block;
@@ -15,18 +15,24 @@ body {
     width: 100%;
     max-width: 100%;
     box-shadow: none;
-    background-color: #4444fa;
+    background-color: #222D5A;
     position: fixed;
-    height: 60px!important;
+    height: 8%!important;
     overflow: hidden;
     z-index: 10;
+}
+.header img{
+    margin-left: 10px;
 }
 .main {
     display: flex;
     margin: 0 auto;
     display: block;
-    height: 45%;
+    height: 93.1vh;
     margin-top: 60px;
+    background:#17203E ;
+    width: 78%;
+    padding: 2rem
 }
 .mainInner{
     display: table!important;
@@ -42,28 +48,27 @@ body {
     letter-spacing: 1.25px!important;
 }
 #sidebarMenu {
-    height: 100%!important;
-    position: fixed!important;
+    margin-top: 3.7rem;
     left: 0!important;
-    width: 250px!important;
-    margin-top: 60px!important;
-    transform: translateX(-250px)!important;
+    width:22%!important;
+
     transition: transform 250ms ease-in-out!important;
-    background: linear-gradient(180deg, #4444fa 0%, #758bfa 100%)!important;
+    background: #253370;
 }
 .sidebarMenuInner{
     margin:0 !important;
     padding:0!important;
     border-top: 1px solid rgba(255, 255, 255, 0.10)!important;
+    display: flex;
+    flex-direction: column;
 }
 .sidebarMenuInner li{
-    list-style: none!important;
-    color: #fff!important;
-    text-transform: uppercase!important;
-    font-weight: bold!important;
-    padding: 20px!important;
-    cursor: pointer!important;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.10)!important;
+    list-style: none;
+    color: #fff!;
+    font-weight: bold!;
+    padding: 1rem;
+    cursor: pointer!;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.10)!;
 }
 .sidebarMenuInner li span{
     display: block!important;
@@ -72,7 +77,6 @@ body {
 }
 .sidebarMenuInner li a{
     color: #fff!important;
-    text-transform: uppercase!important;
     font-weight: bold!important;
     cursor: pointer!important;
     text-decoration: none!important;
@@ -148,7 +152,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 /* content */
 
 .btn-chart{
-    font-family: 'Exo 2', sans-serif;
+    font-family: 'Poppins', sans-serif;;
     border: 0;
     font-weight: 600;
     font-size: 18px;
@@ -170,7 +174,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     padding-top: 45px;
 }
 .btn-chart {
-    font-family: 'Exo 2', sans-serif;
+    font-family:  'Poppins', sans-serif;
     border: 0;
     font-weight: 600;
     font-size: 18px;
@@ -186,11 +190,12 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .dash {
     top: 0;
     left: 25%;
-    background-color: rgb(237, 234, 234);
-    height: 100vh; 
+    background-color: #17203E;
+    height: 90vh; 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
 }
 .regua {
     display: flex;
@@ -234,7 +239,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     flex-direction: column;
     background-color: white;
     width: 80%;
-    height: 65%;
+    height: 45%;
     margin-top:20px;
     margin-left: 40px;
     margin-bottom: 150px;
@@ -247,12 +252,12 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 
 .grafico h1{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-family: 'Poppins', sans-serif;
 }
 
 
 .grafico h3{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin-top: 15px;
 }
 
@@ -268,21 +273,24 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 
 .centralizar{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
 }
 
 .graph1 {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: #eaeaea;
-    width: 45%;
+    background-color: #222D5A;
+    width: 50%;
     height: 35vh;
     margin: 10px;
     padding: 5px;
+    border-radius: 10px;
   }
-
+.retangulo .graph1 {
+    width: 73%;
+}
   /* cards estacionamento */
 
 
@@ -393,3 +401,45 @@ main.cards1 section.card1.about {
     box-shadow: 20px 20px 50px -30px #FFC1D5;
 }
 
+.grafico3{
+    background-color: #17203E ;
+    width: 100vw;
+    height: 50vh;
+    display: flex;
+
+    flex-direction: column;
+}
+
+
+.retangulo2{
+    background: white;
+    width: 72.5vw;
+    height: 40vh;
+    margin: 1rem;
+    border-radius: 10px;
+}
+
+
+.corpoDebaixo{
+
+    display: flex;
+    height: 100vh;
+}
+.sair{
+    margin-top: 19rem;
+}
+
+li img {
+     margin: 1rem;
+
+}
+li a {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+ 
+}
+
+
+.corpoDecima{
+    display: flex;
+    height: 100vh;
+}
