--- a/Site/public/css/tela-login.css
+++ b/Site/public/css/tela-login.css
@@ -390,3 +390,16 @@ input {
 .social i {
     margin-right: 4px;
 }
+
+
+.loading-div {
+    width: 50px;
+    /* border: 3px solid pink; */
+    margin: auto;
+    display: none;
+}
+
+.loading-div img {
+    height: 50px;
+    width: 50px;
+}
