--- a/Site/public/dash-estatica/nav.css
+++ b/Site/public/dash-estatica/nav.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .header {
-    display: block;
+    display: flex;
     margin: 0 auto;
     width: 100%;
     max-width: 100%;
@@ -22,14 +22,14 @@ body {
     z-index: 10;
 }
 .header img{
-    margin-left: 10px;
+    margin-left: 2%;
 }
 .main {
     display: flex;
     margin: 0 auto;
     display: block;
     height: 93.1vh;
-    margin-top: 60px;
+    margin-top: auto;
     background:#17203E ;
     width: 78%;
     padding: 2rem
@@ -66,7 +66,7 @@ body {
     list-style: none;
     color: #fff!;
     font-weight: bold!;
-    padding: 1rem;
+    padding: 2rem;
     cursor: pointer!;
     border-bottom: 1px solid rgba(255, 255, 255, 0.10)!;
 }
@@ -288,10 +288,8 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     padding: 5px;
     border-radius: 10px;
   }
-.retangulo .graph1 {
-    width: 73%;
-}
-  /* cards estacionamento */
+
+  /* cards  */
 
 
 main.cards {
@@ -442,4 +440,23 @@ li a {
 .corpoDecima{
     display: flex;
     height: 100vh;
+}
+
+
+
+.hello {
+    width: 100%;
+    display: flex;
+    /* justify-content: space-around; */
+    margin-left: 10%;
+}
+
+.hello h3 {
+    color: #ffffff;
+    font-weight: bolder;
+    font-size: 2.2rem;
+    }
+
+.hello h3 span {
+    font-weight: 800;
 }
