CRUD 1 com css e rodando na Azure

--- a/Site/public/dash-estatica/dash-cadastro.css
+++ b/Site/public/dash-estatica/dash-cadastro.css
@@ -2,7 +2,7 @@
   display: flex;
   margin: 0 auto;
   display: block;
-  height: 200vh;
+  height: 250vh;
   margin-top: 60px;
   background:#17203E ;
   width: 78%;
@@ -192,12 +192,33 @@ input{
   align-items: center;
   justify-content: center;
 
+  border-radius: 10%;
+
   margin-top: 10%;
   margin-left: 10%;
 
   width: 85%;
-  height: 70vh;
-  background-color: #ffffff;
+  height: 100vh;
+  background-color: rgba(255,255,255,0.13);
+
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255,255,255,0.1);
+}
+.btn_mural_funcionarios
+{
+  border: none;
+  color: #ffffff;
+  padding: 20px;
+  margin: 10px;
+  font-size: 15px;
+  line-height: 24px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+  transition: all 400ms ease;
+  background-color: #34aedf;
+  width: 30%;
 }
 .botoes_crud
 {
@@ -206,13 +227,79 @@ input{
   justify-content: space-around;
 
 }
+.publicacao span
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border: #ffffff 2px;
+  width: 100%;
+  
+  color: #ffffff;
+}
+.atualizarMural
+{
+    border: none;
+    color: #ffffff;
+    padding: 10px;
+    margin: 10px;
+    font-size: 15px;
+    line-height: 24px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    background-color: #34aedf;
+    width: 20%;
+}
+.btnDeletar
+{
+    border: none;
+    color: #ffffff;
+    padding: 2px;
+    margin: 5px;
+    font-size: 15px;
+    line-height: 24px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    cursor: pointer;
+    background-color: #df343f;
+    width: 60%;
+}
+.btnUpdate
+{
+  border: none;
+  color: #ffffff;
+  padding: 2px;
+  margin: 5px;
+  font-size: 15px;
+  line-height: 24px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+  background-color: #3ddf34;
+  width: 60%;
+}
+.selectUpdate
+{
+  border: none;
+  color: #ffffff;
+  padding: 2px;
+  margin: 5px;
+  font-size: 15px;
+  line-height: 24px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  cursor: pointer;
+  background-color: #17203E;
+  width: 20%;
+}
 .inputDeleteUpdate
 {
   text-align: center;
   color: white;
   
-  width: 30%;
-  height: 10%;
+  width: 20%;
+  height: 5%;
   background-color: #17203E;
 }
 .ipt_update
@@ -220,8 +307,8 @@ input{
   text-align: center;
   color: white;
   
-  width: 30%;
-  height: 10%;
+  width: 20%;
+  height: 5%;
   background-color: #17203E;
 
 }
